# iro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
config/: base_config.yaml
config/experiments/: cmnist_iro.yaml  iwildcam_iro.yaml
docs/: cispa_cluster.md  index.md  installation.md  slurm_cluster.md  usage.md  workspace_cluster.md
iro/: __init__.py  iro.py
iro/cli/: __init__.py  train.py
iro/core/: __init__.py  artifacts.py  config.py  runner.py
iro/data/: __init__.py  base_dataset.py  cmnist_dataset.py  custom_dataset.py  iwildcam.py
iro/examples/: __init__.py  _io.py  cmnist_iro.py
iro/models/: __init__.py  cnn.py  mlp.py  transformer.py
iro/training/: __init__.py  train_cmnist.py  train_iwildcam.py
iro/utility/: __init__.py  algorithms.py  arm_regression.py  iro_utils.py  kde.py  misc.py  networks.py
iro/visualization/: cvar_curves.py  risk_comparison_vis.py
notebooks/: cmnist_dgil_full_pipeline.ipynb  cmnist_results_analysis.ipynb  iwildcam_cvar_analysis.ipynb  iwildcam_results_analysis.ipynb
scripts/: collect_cvar_curves.py  iro_train_slurm.sbatch  iwildcam_train_slurm.sbatch  smoke_iwildcam.sh  submit_cmnist_full_grid.sh  submit_cmnist_repro_array.sh  submit_iwildcam.sh
scripts/cispa/: iro_train_cispa.sbatch  submit_cmnist_full_grid.sh  submit_cmnist_repro_array.sh
scripts/cispa/overrides/: cmnist_full_grid_base.txt
scripts/overrides/: cmnist_full_grid_base.txt  cmnist_paper_repro.txt
scripts/workspace/: collect_cmnist_table.py  iro_train_workspace.sbatch  submit_cmnist_full_grid.sh
slurm/: iwildcam.sbatch
src/: requirements.txt
src/iro/: __init__.py  cli.py  trainer.py
src/iro/aggregation/: __init__.py  aggregators.py
src/iro/cmnist_exp/: algorithms.py  train_sandbox.py
src/iro/cmnist_exp/vis/: __init__.py  common.py  pareto_front.py  per_env_loss_fixed.py  per_env_loss_stable.py  risk_curves.py  risk_curves_stable.py  risk_distribution_hist.py
src/iro/data/: __init__.py  base_dataset.py  custom_dataset.py  wilds_dataset.py  woods_dataset.py
src/iro/examples/: README.md  creditcard_aggregator_comparison.py  creditcard_iro.py  initial_aggregator_comparison.py  iris_aggregation_generalization.py  iro_operator_choice.py  smoke_tests.py  wilds_experiment.py
src/iro/models/: logistic_regression.py  resnet.py
src/iro/utility/: __init__.py  algorithms.py  arm_regression.py  data_generator_1d.py  fast_data_loader.py  iro_utils.py  kde.py  misc.py
src/iro/visualization/: risk_comparison_vis.py
tests/: __init__.py  test_cli.py  test_cmnist_legacy.py  test_collect_cvar_curves.py  test_cvar_curves_plotting.py  test_iro.py  test_iwildcam_integration.py  test_slurm_scripts.py
