[project]
name = "iro"
version = "0.1.0"
description = "A Python library for Imprecise Risk Optimization, providing risk measures and optimization algorithms under uncertainty."
readme = "README.md"
authors = [
  {name = "Joseph C. Sheils", email = "joseph.sheils@cispa.de"}
]
maintainers = [
  {name = "Joseph C. Sheils", email = "joseph.sheils@cispa.de"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/jcsheils/iro/issues"
changelog = "https://github.com/jcsheils/iro/blob/master/changelog.md"
homepage = "https://github.com/jcsheils/iro"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
iro = "iro.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
